--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.24",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
