--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
     "node-sass": "^4.12.0",
+    "ol": "^5.3.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
+    "vuelayers": "^0.11.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
